--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,44 @@ color: #434455;
 background-color: #fff ;
 }
 
+/* reset */
+
 ul,ol {
 list-style-type: none;
+margin: 0;
+padding: 0;
 }
 
 a {
 text-decoration: none;
+}
+
+/* common */
+
+.container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+}
+
+.header-nav {
+    display: flex;
+    align-items: center;
+}
+
+/* header */
+
+.page-header {
+    border-bottom: 1px solid #e7e9fc;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
 }
 
 .logo {
@@ -22,6 +54,11 @@ text-transform: uppercase;
 color: #4d5ae5;
 }
 
+.header-logo {
+    padding: 24px 0;
+    margin-right: 76px;
+}
+
 .header-logo .logo-part{
 color: #2e2f42;
 }
@@ -30,7 +67,15 @@ color: #2e2f42;
 color: #f4f4fd;
 }
 
+.nav-list {
+    display: flex;
+    align-items: center;  
+    gap: 40px; 
+}
+
 .nav-link {
+padding: 24px 0;
+display: block;
 font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
@@ -40,9 +85,18 @@ color: #2e2f42;
 
 .contacts {
 font-style: normal;
+margin-left: auto;
+}
+
+.contacts-list {
+    gap: 40px;
+    display: flex;
+    align-items: center;
 }
 
 .contacts-link {
+display: block;
+padding: 24 0;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
