--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,9 @@ color: #434455;
 background-color: #fff ;
 }
 
-/* reset */
+h1, h2, h3, h4, h5, h6, p {
+margin: 0;
+} 
 
 ul,ol {
 list-style-type: none;
@@ -12,17 +14,20 @@ margin: 0;
 padding: 0;
 }
 
+img {
+display: block;
+}
+
 a {
 text-decoration: none;
 }
-
-/* common */
 
 .container {
     max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
 }
+ /*HEADER*/
 
 .header-container {
     display: flex;
@@ -34,15 +39,10 @@ text-decoration: none;
     align-items: center;
 }
 
-/* header */
-
 .page-header {
     border-bottom: 1px solid #e7e9fc;
 }
 
-h1, h2, h3, h4, h5, h6, p {
-    margin: 0;
-}
 
 .logo {
 font-family: "Raleway", sans-serif;
@@ -62,6 +62,16 @@ color: #4d5ae5;
 .header-logo .logo-part{
 color: #2e2f42;
 }
+
+/*section 1*/
+
+.information-container {
+    width: 1440px;
+    height: 600px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 
 .footer-logo .logo-part{
 color: #f4f4fd;
@@ -115,7 +125,8 @@ font-size: 56px;
 line-height: 1.07;
 letter-spacing: 0.02em;
 text-align: center;
-color: #fff;
+color: #fff;   
+margin-bottom: 48px;
 }
     
 .button-title {
@@ -125,6 +136,11 @@ color: #fff;
 background-color: #4D5AE5;
 cursor: pointer;
 letter-spacing: 0.04em;
+border-radius: 4px;
+padding: 16px 32px;
+min-width: 169px;
+height: 56px;
+border: none; 
 }
 
 .button-title:hover, 
@@ -187,6 +203,8 @@ text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
 }
+
+/*FOOTER*/
 
 .information,
 .page-footer {
